spec/data/invalid_players/player4.rb
class InvalidSyntaxPlayer
  def name
    some gobbledygook that isn't valid
  end
  
  def new_game(dictionary)
    end
  end
  
  def take_turn(pattern)
  end
end